<resources>
    <string name="app_name">Xhy WageCalc</string>
        <string name="emptitle">Xhyrich Wage Calculator</string>
        <string name="empname">Employee Name</string>
        <string name="empsalary">Employee Salary</string>
        <string name="emptax">Employee Tax</string>
        <string name="netsal">NetSalary</string>
        <string name="ok">Ok</string>
        <string name="cancel">Cancel</string>

</resources>